--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
 		"svelte-preprocess": "^4.10.5",
+		"svelte-simple-modal": "^1.4.1",
 		"tailwindcss": "^3.0.23",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.2"
@@ -38,6 +39,7 @@
 	"dependencies": {
 		"@vime/core": "^5.3.1",
 		"@vime/svelte": "^5.3.1",
-		"date-fns": "^2.28.0"
+		"date-fns": "^2.28.0",
+		"svelte-confetti": "^1.2.0"
 	}
 }
