--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.3.1",
     "@astrojs/tailwind": "^5.0.2",
+    "@justinribeiro/lite-youtube": "^1.5.0",
     "astro": "^3.5.3",
     "astro-icon": "^0.8.1",
     "tailwindcss": "^3.0.24",
