--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astro-community/astro-embed-youtube": "^0.4.4",
     "@astrojs/check": "^0.4.1",
+    "@astrojs/react": "^3.0.9",
     "@astrojs/tailwind": "^5.1.0",
+    "@leenguyen/react-flip-clock-countdown": "^1.5.0",
+    "@types/react": "^18.2.52",
+    "@types/react-dom": "^18.2.18",
     "astro": "^4.2.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
