--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "postcss-nesting": "^12.1.2"
   }
 }
