fix: perfomance issue

--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "@astrojs/check": "^0.4.1",
     "@astrojs/react": "^3.0.9",
     "@astrojs/tailwind": "^5.1.0",
+    "@fontsource/montserrat": "^5.0.18",
+    "@fontsource/nunito": "^5.0.18",
     "@leenguyen/react-flip-clock-countdown": "^1.5.0",
     "@types/react": "^18.2.52",
     "@types/react-dom": "^18.2.18",
-    "astro": "^4.2.3",
+    "astro": "^4.8.6",
+    "astro-robots-txt": "^1.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "drizzle-zod": "^0.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.2.1",
